--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,35 +5,38 @@ header {
   height: 69px;
   opacity: 0.9;
   background-color: black;
-  justify-content: space-between;
-  padding-bottom: 24px;
-  width: 100%;
-}
-header .logo {
-  margin-top: 15px;
-  margin-left: 10px;
-  display: flex;
   align-items: center;
-  flex-wrap: wrap;
+  z-index: 1;
+  width: 100%;
+  padding-bottom: 30px;
 }
-nav span {
-  display: flex;
-  margin-right: 10px;
-  margin-top: 16px;
+.logo {
+  height: 50px;
 }
-nav span a {
-  font-family: helvetica;
+header nav {
+  flex-direction: row;
+  flex-grow: 1;
+  padding-right: 30px;
+  text-align: right;
+  margin-top: 15px;
+}
+a {
+  text-decoration: underline;
   color: seashell;
   font-size: 22px;
-  display: flex;
   padding: 0 10px;
+  font-family: helvetica;
 }
 body {
   background-color: black;
   margin-top: 0;
   display: flex;
   overflow: scroll;
-  align-content: center;
+  text-align: center;
+  flex-direction: column;
+  font-family: helvetica;
+  color: seashell;
+  opacity: 0.9;
 }
 .mission {
   height: 700px;
@@ -41,26 +44,135 @@ body {
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
   display: flex;
   justify-content: center;
+  align-items: center;
+  text-align: center;
   margin-left: 25px;
+  flex-wrap: wrap;
+  padding-top: 50px;
+  flex-direction: column;
 }
-.midpic {
-  height: 100px;
-  width: 1200px;
+#ourmission {
   background-color: black;
-  display: flex;
-  margin-top: 350px;
+  width: 100%;
+  margin: 0px;
+  padding: 10px 0px 20px 0px;
+  color: seashell;
 }
-.midpic h2 {
-  font-family: helvetica;
+#missionbrief {
+  background-color: black;
+  width: 100%;
+  margin: 0px;
+  padding-bottom: 10px;
+  color: seashell;
+}
+.monthtea {
+  width: 1000px;
+  height: 700px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  position: relative;
+  margin-left: 120px;
+  flex-wrap: wrap;
+  margin-top: 85px;
+
+}
+#ofthemonth {
+  color: seashell;
+  margin: 0px;
+  padding: 10px 0px 20px 0px;
+}
+#monthbrief {
+  color: seashell;
+  margin: 0px;
+  padding-bottom: 20px;
+}
+.teas {
+  flex-wrap: wrap;
+  justify-content: space-around;
+  display: flex;
+}
+.teas h2 {
+  text-align: center;
+  width: 300px;
+  font-family:
+}
+
+
+.teaimg img {
+  width: 300px;
+  height: 200px;
+}
+#img4 {
+  margin-right: -165px;
+  margin-bottom: auto;
+}
+#img5 {
+  margin-left: -165px;
+  margin-bottom: auto;
+}
+.location {
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
+  height: 500px;
+  width: 1200px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 50px;
+  opacity: 0.9;
+}
+#mainheading {
+  display: block;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  padding-top: 50px;
+}
+.lists {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+#left {
+  background-color: black;
+  width: 300px;
+  height: 300px;
+  padding-top: 15px;
+  margin-right: 40px;
+}
+#mid {
+  background-color: black;
+  width: 300px;
+  height: 300px;
+  padding-top: 15px;
+  margin-right: 40px;
+}
+#right {
+  background-color: black;
+  width: 300px;
+  height: 300px;
+  padding-top: 15px;
+}
+.address {
+  opacity: 1;
+  padding: 20px;
+}
+
+.contact {
+  height: 200px;
+  width: 1200px;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  position: relative;
+  display: flex;
+  margin-left: 25px;
   color: seashell;
   opacity: 0.9;
-  display: flex;
-  vertical-align: middle;
 }
-.midpic h4 {
-  font-family: helvetica;
-  color: seashell;
-  opacity: 0.9;
-  display: flex;
-  vertical-align: middle;
+footer {
+  text-align: left;
+  margin-left: 20px;
 }
